[package]
name = "mscply"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
serde_json = "1"
tmpfile = "0.0.3"
tempfile = "3.23.0"
libmpv2 = "5.0.2"
